bin/testsuite/tests/compiler/src/errors/compiler5676.swg
/*#global testerror "Err0377"
var a = cast #toto (s32) 0
*/
